--- a/html/scss/panels/tab_panel.scss
+++ b/html/scss/panels/tab_panel.scss
@@ -18,6 +18,7 @@
 			width: 100%;
 			text-align: left;
 			border-bottom: 1px solid #22505F;
+			opacity: .9;
 			cursor: pointer;
 			position: relative;
 			@media #{$medium-up} {
@@ -34,12 +35,20 @@
 				}
 			}
 			.subtypeindicator{
+				display: none;
+				@media #{$medium-up} {
+					display: block;
+				}
 				position: absolute;
 			    top: 100%;
 			    width: 100%;
 			    margin-top: 10px;
 			}
 			.datatype-filter {
+				display: none;
+				@media #{$medium-up} {
+					display: block;
+				}
 				position: absolute;
 				right: 0;
 				top: 0px;
@@ -49,7 +58,7 @@
 				&:after {
 					border-color: #28777F;
 					border-style: solid;
-					border-width: .10em .10em 0 0;
+					border-width: .05em .05em 0 0;
 					content: "";
 					display: inline-block;
 					height: .50em;
