--- a/html/scss/shared.scss
+++ b/html/scss/shared.scss
@@ -45,14 +45,15 @@ body {
 		}
 		#map {
 			top: 18%;
-            min-height: 400px;
+            height: 400px;
             width: 100%;
+            padding: 20px 0;
             display: none;
 			// width: 1px;
             // height: 1px;
             // text-indent: -9999px;
             @media #{$medium-up} {
-                height: calc(100% - 18% - 250px);
+                height: 400px;
                 width: 100%;
                 display: block;
                 opacity: 1;
@@ -78,7 +79,7 @@ body {
                     position: relative;
                     &:after {
             			border-style: solid;
-            		    border-width: .10em .10em 0 0;
+            		    border-width: .05em .05em 0 0;
             		    content: "";
             		    display: inline-block;
             		    height: .50em;
