--- a/html/css/style.css
+++ b/html/css/style.css
@@ -615,6 +615,9 @@ body {
   #app_panel #app_wrapper #show_current {
     display: none; }
 
+.level1 .active * {
+  fill: red !important; }
+
 #error {
   position: absolute;
   bottom: 0;
