When a geographical region has no data - do not show a pointer

--- a/html/scss/shared.scss
+++ b/html/scss/shared.scss
@@ -62,7 +62,10 @@ body {
 				fill: #7CC9C5;
 				transition: fill .5s ease;
 				cursor: pointer;
-			}
+                &.no-data {
+                    cursor: default!important;
+                }
+            }
 			.active:not(#world) *{
 				fill: $color-highlight!important;
 			}
