--- a/html/css/style.css
+++ b/html/css/style.css
@@ -570,6 +570,8 @@ body {
       fill: #7CC9C5;
       transition: fill .5s ease;
       cursor: pointer; }
+      #app_panel #app_wrapper #map svg *.no-data {
+        cursor: default !important; }
     #app_panel #app_wrapper #map .active:not(#world) * {
       fill: #E2EA6D !important; }
   #app_panel #app_wrapper #regions ul {
