Improved responsive behavior of numbers and labels in the details panel, show/hide lines in the detail view is now triggered "onhashchange"

--- a/html/scss/panels/region_info.scss
+++ b/html/scss/panels/region_info.scss
@@ -71,7 +71,18 @@
 		width: 100%;
 		padding: .3em 0;
 		border-bottom: 1px solid #3A707A;
-		span {
+
+        &:after { 
+            content: " ";
+            display: block; 
+            height: 0; 
+            clear: both;
+        }
+
+        span.label {
+            float: left;
+        }
+		span.nr {
 			float: right;
 			color: #fff;
 			font-weight: 700;
