Fix for default page load (now directly shows details panel) and details panel cannot be closed anymore when displaying global level

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -354,6 +354,10 @@
   .region_info_wrapper .region_info_content {
     margin: 0 2em; }
 
+/* ORU Level based styling */
+.orulevel1 .region_info .region_info_close {
+  display: none; }
+
 .map_tools {
   width: 100%;
   height: 100%;
