--- a/html/scss/panels/region_info.scss
+++ b/html/scss/panels/region_info.scss
@@ -232,3 +232,12 @@
 		margin: 0 2em;
 	}
 }
+
+/* ORU Level based styling */
+.orulevel1{
+    .region_info{
+        .region_info_close{
+            display: none;
+        }
+    }
+}
