--- a/html/css/style.css
+++ b/html/css/style.css
@@ -612,20 +612,23 @@ body {
     display: none; }
     @media only screen and (min-width: 769px) {
       #app_panel #app_wrapper #map {
-        height: 400px;
+        height: 440px;
         width: 100%;
         display: block;
         opacity: 1; } }
-    #app_panel #app_wrapper #map #main_wrapper #holder_1000 {
-      text-align: center; }
-      #app_panel #app_wrapper #map #main_wrapper #holder_1000 svg {
-        margin: 0 auto; }
-        #app_panel #app_wrapper #map #main_wrapper #holder_1000 svg * {
-          fill: #7CC9C5;
-          transition: fill .5s ease;
-          cursor: pointer; }
-          #app_panel #app_wrapper #map #main_wrapper #holder_1000 svg *.no-data {
-            cursor: default !important; }
+    #app_panel #app_wrapper #map #main_wrapper {
+      height: 440px; }
+      #app_panel #app_wrapper #map #main_wrapper #holder_1000 {
+        height: 440px;
+        text-align: center; }
+        #app_panel #app_wrapper #map #main_wrapper #holder_1000 svg {
+          margin: 0 auto; }
+          #app_panel #app_wrapper #map #main_wrapper #holder_1000 svg * {
+            fill: #7CC9C5;
+            transition: fill .5s ease;
+            cursor: pointer; }
+            #app_panel #app_wrapper #map #main_wrapper #holder_1000 svg *.no-data {
+              cursor: default !important; }
     #app_panel #app_wrapper #map .active:not(#world) * {
       fill: #E2EA6D !important; }
   #app_panel #app_wrapper #regions ul {
@@ -674,7 +677,7 @@ body {
     position: relative; }
     @media only screen and (min-width: 769px) {
       #app_panel #app_wrapper #bottom_panel {
-        top: 50px;
+        top: 10px;
         height: 275px; } }
   #app_panel #app_wrapper #slider_indicator,
   #app_panel #app_wrapper #show_simulation,
@@ -715,3 +718,7 @@ body {
   @media only screen and (min-width: 1400px) {
     .container {
       max-width: 1280px; } }
+
+/* Do not show the pointer cursor for the map on oru level 1 */
+.orulevel-1 #map #main_wrapper #holder_1000 svg * {
+  cursor: default !important; }
